[package]
name = "macros"
version = "0.1.0"
authors = ["cuisongliu <cuisongliu@qq.com>"]
edition = "2021"
description = "macros, a rusty-hermit application"
repository = "https://github.com/rust-learn-days/macros"
[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"

[lib]
proc-macro = true
